PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/FunctionDefinedMultipleTimes.pf
module FunctionDefinedMultipleTimes {

    fun getInt() : Int {
        return 1
    }

    fun getInt(a Int) : Int {
        return a
    }

    fun testSomething() : Int {
        i Int = getInt()
         
        return i
    }
}