PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/ImmutableGlobalVariable3.pf
module ImmutableGlobalVariable {

    data Test {
        count : Int
    }

    i Test = (0)

    fun testSomething() : Int {
         i.count = 0

        return i
    }
}